[metadata]
name = rbd-tree
summary = A tool to print rbd volume and snapshot in tree
author = Cheng Li
author-email = shcli@cn.ibm.com
home-page = http://www.blueboxcloud.com/
classifier =
    Operating System :: POSIX :: Linux
    Programming Lanuage :: Python
    Programming Lanuage :: Python :: 2.7

[pbr]
warnerrors = True

[files]
packages =
    rbd_tree

[entry_points]
console_scripts =
    rbd-tree = rbd_tree.shell:main
